# content-hub

./: .env.example  AI_PROJECT_GUIDE.md  CLI_IMPLEMENTATION_CHECKLIST.md  CLI_IMPLEMENTATION_PLAN.md  FEATURE_DEV.md  FEATURE_DEVELOPMENT_PROCESS.md  README.md  ch  ch.bat  ch.ps1  ch.py  content-scripts.txt  database.py  index.html  main.py  models.py  package-lock.json  package.json  profile.md  pyproject.toml  run.sh  setup.cfg
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py  ui.py
app/lib/: calendar.py  storage.py
app/routers/: __init__.py  ideas.py  pages.py  templates.py
app/static/: styles.css
app/templates/: calendar.html  edit.html  snippets.html
click/: __init__.py
docs/plans/: ch_launcher_step2_feature_description.md  ch_launcher_step3_development_plan.md  ch_launcher_step4_implementation_summary.md
fastapi/: __init__.py
scripts/: manage.py
src/: App.jsx  constants.js  firebase.js  styles.css  utils.js
src/components/: Board.jsx  CardModal.jsx
src/hooks/: useBoardsData.js
static/: styles.css
templates/: edit.html  inbox.html
tests/: test_calendar.py
tools/: dev.py
