[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-hub"
version = "0.1.0"
description = "ContentHub modular FastAPI + SQLModel platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["app"]
