[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contenthub"
version = "0.4.0"
description = "Visual content calendar built with FastAPI and SQLite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContentHub" }]
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.27,<0.29",
    "SQLAlchemy>=2.0,<2.1",
    "Jinja2>=3.1,<3.2",
    "python-multipart>=0.0.9,<0.0.10",
    "pydantic>=2.6,<2.8",
    "boto3>=1.34,<1.35",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<0.5",
    "pytest>=8.1,<8.2",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
