[metadata]
name = content-hub
version = 0.1.0
description = ContentHub modular FastAPI + SQLModel platform
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =

[options.packages.find]
where = .
